Fix item details carrousel overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -556,7 +556,7 @@ header::after {
   }
 }
 
-.horizontal-carrousel .overflow-x-scroll {
+.horizontal-carrousel .overflow-x-auto {
   scrollbar-width: thin;
 }
 .horizontal-carrousel a {
