--- a/src/scss/components/card-carrousel.scss
+++ b/src/scss/components/card-carrousel.scss
@@ -1,5 +1,5 @@
 .horizontal-carrousel {
-    .overflow-x-scroll {
+    .overflow-x-auto {
         scrollbar-width: thin;
     }
 
